--- a/4.namespace/index.html
+++ b/4.namespace/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <script type="module">
-    import jquery from 'jquery'  </script>
+    import jquery from 'jquery' 
+   </script>
 </body>
 </html>
